<resources>
    <string name="app_name">CatChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_email">onumndu@gmail.com</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_sent">Sent messages</string>
    <string name="nav_trash">In da trash</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Give us feedback</string>
    <string name="nav_drawer_open">Drawer open</string>
    <string name="nav_drawer_close">Drawer close</string>
</resources>