<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:title="@string/nav_messages"
            android:icon="@drawable/ic_round_email_24"
            android:checked="true"/>
        <item
            android:id="@+id/nav_drafts"
            android:title="@string/nav_drafts"
            android:icon="@drawable/ic_round_edit_24" />
        <item
            android:id="@+id/nav_sent"
            android:title="@string/nav_sent"
            android:icon="@drawable/ic_round_send_24" />
        <item
            android:id="@+id/nav_trash"
            android:title="@string/nav_trash"
            android:icon="@drawable/ic_round_delete_24" />
    </group>

    <item android:title="@string/nav_support" >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help"
                android:icon="@drawable/ic_round_help_24" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback"
                android:icon="@drawable/ic_round_email_24" />
        </menu>
    </item>

</menu>